<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
    <item android:id="@+id/geologic_summary_menu"
        android:title="@string/geologic_summary_title"
        android:checked="true"/>
    <item android:id="@+id/national_parks_menu"
        android:title="@string/national_parks"/>
    <item android:id="@+id/fossils_menu"
        android:title="@string/fossils_title"/>
    <item android:id="@+id/earthquake_menu"
        android:title="@string/earthquakes"/>
    <item android:id="@+id/maps_menu"
        android:title="@string/map"/>
    </group>
</menu>